* Minimum OpenGL version is now 3.3.
* Application startup command is now written to the log file.
* Implemented [-]-help command line option - shows list of available command line
  switches.
* Internal framerate cap increased from 200 to 240 fps.
* OXZ Manager: Implemented filter by category.
* OXZ Manager: Leading whitespaces in text filters are now ignored for reduced
  confusion.

Expansion Pack Development:
===========================

Modified Plists:
---------------
* keyconfig2.plist is the new keyboard configuration plist. keyconfig.plist
  has been deprecated.
* planetinfo.plist: illumination_color added (used with illumination map in planet
  texture).
* planetinfo.plist: added air_density (default value 0.75).
* equipment-overrides.plist: "name" and "description" properties are now available 
  for use in equipment-overrides.plist, as optional replacements for 
  "short_description" and "long_description" respectively, so as to match 
  EquipmentInfo specification.
* equipment.plist: hide_values allows an equipment item to hide the cost and 
  install time values on the F3 Ship Outfitting screen.
* equipment.plist: purchase_sort_order allows the sorting of the F3 Ship Outfitting
  screen to be sorted independently of the F5 Status screen.
* equipment.plist: default_activate_key and default_mode_key allows a default key
  setting for the activate and mode keys. If, when loading, a conflict with another
  key is encountered, the setting will be ignored.

Scripting:
----------
* Added world event consoleMessageReceived.
* ship.canAwardEquipment now accepts optional additional parameter of "context", 
  enabling checking of any context for the equipment item.
* Added player.ship.previousSystem property, which contains the system ID of 
  where the player as jumped from.
* shipWillExitWitchspace and shipExitedWitchspace world events now include the 
  jump cause parameter.
* Added beginGalacticHyperspaceCountdown world event.