@@ -52,6 +52,8 @@ General:
 * OXZ Manager: Implemented filter by category.
 * OXZ Manager: Leading whitespaces in text filters are now ignored for reduced
   confusion.
+* Updated the wormhole cloud effect.
+* Mouse flight sensitivity made configurable by editing the preferences file.
 
 Expansion Pack Development:
 ===========================
